--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -18,7 +18,6 @@
   border-radius: 3px;
   overflow: hidden;
   box-shadow: 0 0 5px #5a5a5a;
-  margin-bottom: 50px;
 }
 
 .postForm {
@@ -143,4 +142,24 @@
 
 .submitPostButton:active {
   opacity: 1;
+}
+
+.loadMoreContainer {
+  margin-top: 20px;
+  position: relative;
+  float: left;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 0 5px #5a5a5a;
+  background-color: #ffffff;
+}
+
+.loadMore {
+  font-size: 22px;
+  font-weight: bold;
+  color: #222222;
+  margin: 0;
+  cursor: pointer;
+  text-align: center;
 }
