--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -24,6 +24,7 @@
   float: left;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 html {
@@ -191,4 +192,12 @@ textarea {
   h3 {
     page-break-after: avoid;
   }
+}
+
+.navSliderContainer {
+  position: relative;
+  float: left;
+  width: 200%;
+  z-index: 2;
+  transition: 400ms ease-in-out;
 }
