--- a/src/components/miniComponents/FeedItem/FeedItem.css
+++ b/src/components/miniComponents/FeedItem/FeedItem.css
@@ -6,52 +6,71 @@
   width: 100%;
   border-radius: 3px;
   background-color: white;
-  padding: 5px 10px 10px 10px;
+  padding: 0;
   box-sizing: border-box;
   box-shadow: 0 0 5px #5a5a5a;
+  margin-top: 20px;
 }
 
 .profilePhoto {
-  position: absolute;
-  top: -25px;
+  position: relative;
+  top: 0px;
   float: left;
-  width: 50px;
-  height: 50px;
+  width: 48px;
+  height: 48px;
   background-size: cover;
   box-shadow: 0 0 5px 0 #5a5a5a;
-  border-radius: 5px;
+  border-radius: 50%;
 }
 
 .feedActionContainer {
   position: relative;
+  padding-left: 16px;
+  flex: 1;
+  height: 100%;
+}
+
+.description {
+  position: relative;
   float: left;
-  padding-left: 65px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .feedAction {
   position: relative;
-  float: left;
-  font-size: 15px;
-  color: var(--theme-color);
+  font-size: 16px;
+  color: #333333;
   font-weight: bold;
   line-height: 20px;
   margin: 0;
 }
 
-.feedDate {
+.feedTime {
   position: relative;
-  float: left;
   font-size: 14px;
+  color: #777777;
   line-height: 20px;
   margin: 0;
-  margin-left: 4px;
+}
+
+
+.ellipsis {
+  position: relative;
+  float: right;
+  font-size: 22px;
+  margin-right: 10px;
+  color: #333333;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
 .post {
   position: relative;
   float: left;
   width: 100%;
-  margin-top: 10px;
+  margin: 0;
 }
 
 .postText {
@@ -67,8 +86,6 @@
   width: 100%;
   height: 450px;
   background-size: cover;
-  border: 1px solid var(--theme-color);
-  border-radius: 4px;
   box-sizing: border-box;
   @media (max-width: 800px) {
     height: 90vw;
@@ -78,4 +95,110 @@
 .fromProfileLink {
   text-decoration: none;
   color: #2a2a2a;
+}
+
+.postHeader {
+  position: relative;
+  float: left;
+  width: 100%;
+  padding: 8px 10px;
+  height: 64px;
+  border-bottom: 1px solid #f1f1f1;
+  box-sizing: border-box;
+  display: flex;
+}
+
+.paddingContainer {
+  position: relative;
+  float: left;
+  box-sizing: border-box;
+  padding: 12px;
+  width: 100%;
+}
+
+.interactionContainer {
+  position: relative;
+  float: left;
+  width: 100%;
+
+}
+
+.bookmark {
+  position: relative;
+  float: left;
+  font-size: 23px;
+  padding-left: 10px;
+  cursor: pointer;
+  color: #222;
+}
+
+.heart {
+  position: relative;
+  float: left;
+  font-size: 23px;
+  cursor: pointer;
+  color: #222;
+}
+
+.likes {
+  position: relative;
+  float: left;
+  width: 100%;
+  margin: 6px 0 8px 0;
+  font-size: 14px;
+  color: #666666;
+}
+
+.commentInput {
+  position: relative;
+  float: left;
+  flex: 1;
+  border-radius: 10px;
+  border: 1px solid #dddddd;
+  padding: 6px 8px;
+  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 18px;
+
+}
+
+.firstCommentContainer {
+  position: relative;
+  float: left;
+  width: 100%;
+  margin-bottom: 8px;
+}
+
+.commentName {
+  position: relative;
+  float: left;
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.comment {
+  position: relative;
+  float: left;
+  margin: 0;
+  padding-left: 8px;
+  font-size: 16px;
+}
+
+.commentInputContainer {
+  position: relative;
+  float: left;
+  width: 100%;
+  display: flex;
+}
+
+.profilePhotoSmall {
+  position: relative;
+  float: left;
+  width: 32px;
+  height: 32px;
+  background-size: cover;
+  box-shadow: 0 0 1px 0 #5a5a5a;
+  border-radius: 50%;
+  margin-right: 8px;
 }
