--- a/src/routes/landing/Landing.css
+++ b/src/routes/landing/Landing.css
@@ -31,10 +31,11 @@
   max-width: 1200px;
   left: 50%;
   transform: translateX(-50%);
+  height: 90px;
 }
 
 .logo {
-  width: 300px;
+  height: 100%;
   margin: 10px 0 0 10px;
   box-sizing: border-box;
   @media (max-width: 600px) {
@@ -48,7 +49,10 @@
 }
 
 .linkCenter {
-  margin: 18px 18px 0 0;
+  position: relative;
+  margin-right: 18px;
+  top: 50%;
+  transform: translateY(-50%);
   float: right;
   @media (max-width: 600px) {
     margin: 0;
